# lexcode

./: .gitignore  Cargo.toml  LICENSE  README.md  detail.md  plan.md
.github/workflows/: ci.yml  release.yml
benches/: query_latency.md
config/: config.toml
data/: snippets.json
docs/: offline-docs.md  snippet-packs.md  validation.md
integrations/: codelex.fish  codelex.nvim.lua  codelex.sh
packaging/: PKGBUILD
src/: cli.rs  compare.rs  config.rs  db.rs  highlight.rs  logging.rs  main.rs  models.rs  search.rs  session.rs  sync.rs  tui.rs
tests/: cli_smoke.rs
