[package]
name = "codelex"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Terminal-native syntax recall for developers switching languages."

[workspace]
members = ["."]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
fuzzy-matcher = "0.3"
ratatui = "0.29"
crossterm = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
